# claude-usage-widget-windows

./: .gitignore  AGENTS.md  NOTICE  README.md  pyproject.toml  setup.ps1
docs/superpowers/plans/: 2026-05-29-phase-0-foundation.md
docs/superpowers/specs/: 2026-05-29-claude-usage-widget-modernization-design.md
launcher/: claude-usage-launcher.vbs
patches/: collector.py  widget.py
src/claude_usage/: __init__.py  analytics.py  auth_watchdog.py  autostart.py  cache_analyzer.py  cli.py  collector.py  config.py  daily.py  logging_setup.py  notifier.py  overlay.py  pricing.py  ticker.py  token_scan.py  trends.py  widget.py  winchrome.py
src/claude_usage/dashboard/: __init__.py  charts.py  unified.py  window.py
tests/unit/: test_analytics.py  test_auth_watchdog.py  test_autostart.py  test_config.py  test_daily.py  test_dashboard_render.py  test_history.py  test_logging_setup.py  test_long_lived_token.py  test_overlay_state.py  test_pricing.py  test_token_scan.py  test_trends.py  test_unified_window.py
