[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-usage-widget"
dynamic = ["version"]
description = "Desktop widget and CLI that shows real-time Claude Code usage limits and cost (Windows-focused fork)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Burak" }]
maintainers = [{ name = "Vaibhav Arora" }]
keywords = ["claude", "anthropic", "usage", "rate-limit", "widget"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "PySide6-Essentials>=6.5,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/arora-vaibhav/claude-usage-widget-windows"
Upstream = "https://github.com/bozdemir/claude-usage-widget"
Issues = "https://github.com/arora-vaibhav/claude-usage-widget-windows/issues"

[project.scripts]
claude-usage = "claude_usage.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["claude_usage*"]

[tool.setuptools.dynamic]
version = { attr = "claude_usage.__version__" }

[tool.setuptools.package-data]
claude_usage = ["py.typed", "icons/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
